fixed scrolling issue on mobile

--- a/css/scss/_container.scss
+++ b/css/scss/_container.scss
@@ -17,7 +17,7 @@
 	}
 
 	@media ( max-width: 782px ) {
-		top: 46px;
+		top: 0;
 		left: 0px;
 		width: 100%;
 	}
@@ -35,13 +35,13 @@
 	position: relative;
 	background: #fff;
 	border: 1px solid #ddd;
-	margin: 10px;
+	margin: 56px 10px 10px;
 	padding: 52px 16px;
 	min-height: 600px; // fallback
 	min-height: calc( 100vh - 66px ); // 46 + 20
 	@include fancy-clearfix;
 
-	@media ( min-width: 764px ) {
+	@media ( min-width: 765px ) {
 		margin: 20px;
 		padding: 80px 16px;
 		min-height: calc( 100vh - 72px ); // 32 + 40
